issues with main image stretching

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ li a {
 
 /* Basic work page styles */
 
-.portfolio_image {
+.thumb_image {
     display: block;
     margin: auto;
     margin-bottom: 1em;
@@ -79,22 +79,11 @@ li a {
     font-size: 3.5em;
 }
 
-input {
-    font-size: 1.3em;
-    max-width: 70%;
-    font-family: arial;
-    margin-top: .3em;
-    border: none;
-}
-
+input,
 textarea {
     font-size: 1.3em;
     max-width: 70%;
     font-family: arial;
-    margin-top: .3em;
-    height: 6em;
-    resize: none;
-    border: none;
 }
 
 .connect_img {
@@ -109,6 +98,9 @@ textarea {
     margin-top: .5em; 
 }
 
+.input {
+    margin-top: .5em;
+}
 
 
 
@@ -135,15 +127,20 @@ textarea {
 }
 
 .header_div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 1.5em;
+    text-align: center;
+    margin-top: 5.5em;
+    margin-bottom: .5em;   
+    font-family: arial; 
+    color: #413e3e;
 }
 
 .work_title {
     font-size: 3em;
     margin-top: 1.8em;
+    margin-bottom: 0;
+    text-align: center;   
+    font-family: arial; 
+    color: #413e3e;
 }
 
 li {
@@ -151,24 +148,37 @@ li {
     font-size: 1.5em; 
 }
 
-.portfolio_div {
-    margin-top: .5em;
+.portfolio {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
-    margin-right: 1em;
 }
 
-.portfolio_image {
-    width: 30%;
+.portfolio_thumb_div {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: .5em;
+    margin-right: 3em;
+    margin-left: 3em;
+
+}
+
+.thumb_image {
+    width: 20%;
     margin: 0;
 }
 
 .main_img {
-    display: block;
-    max-width: 50%;
+    margin-top: 1em;
+    margin-right: 10em;
+    margin-bottom: 5em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 20%;
     height: auto;
     float: right;
 }
@@ -249,7 +259,7 @@ textarea {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 41em;
+    max-width: 83%;
     height: auto;
     float: right;
 }
